# locness-nmea-gps

./: .gitignore  README.md  config.toml  example.py  gps.py  main.py  pyproject.toml
locness_nmea_gps/: __init__.py  config_loader.py  gps.py  main.py  query_db.py
